<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <ImageView
            android:id="@+id/human"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_human"
            app:layout_constraintBottom_toBottomOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toTopOf="@id/background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/profile_login_title"
            android:textColor="@color/text_primary"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/profile_login_subtitle"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/drw_primary_button_background"
            android:text="@string/profile_button_registration_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <Button
            android:id="@+id/authorize"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/drw_button_background"
            android:text="@string/profile_button_login_text"
            android:textColor="@color/accent_primary"
            app:layout_constraintTop_toBottomOf="@id/registration" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>